--- a/src/main.css
+++ b/src/main.css
@@ -15,6 +15,7 @@ img {
         'header header'
         'content content'
         'cards cards'
+        'cards cards'
         'footer footer'
     ;
 }
@@ -106,7 +107,7 @@ img {
     grid-area: cards;
     max-width: 1040px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     grid-gap: 30px;
     justify-self: center;
     margin: 30px 0px;
@@ -135,4 +136,44 @@ img {
 }
 .footer a {
     color: #fff;
+}
+/* Responsivo */
+@media screen and (max-width: 1060px) {
+    .cards {
+        grid-template-columns: 1fr 1fr;
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+}
+@media screen and (max-width: 650px) {
+    .container {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-areas: 
+            'header '
+            'content '
+            'cards '
+            'cards '
+            'footer '
+        ;
+    }
+    .header {
+        grid-template-columns: 1fr;
+    }
+    .header h1 {
+        font-size: 16px;
+        justify-self: center;
+    }
+    .description {
+        font-size: 14px;
+        padding: 0px 30px;
+    }
+    .content {
+        grid-template-columns: 1fr;
+        grid-gap: 30px;
+    }
+    .cards {
+        grid-template-columns: 1fr;
+        grid-gap: 30px;
+    }
 }
